@@ -1,13 +1,13 @@
 <?php
 
 ########################################################################
-# Extension Manager/Repository config file for ext: "simpleshoutbox"
+# Extension Manager/Repository config file for ext "simpleshoutbox".
 #
-# Auto generated 28-04-2009 19:32
+# Auto generated 27-12-2009 00:26
 #
 # Manual updates:
-# Only the data in the array - anything else is removed by next write.
-# "version" and "dependencies" must not be touched!
+# Only the data in the array - everything else is removed by next
+# writing. "version" and "dependencies" must not be touched!
 ########################################################################
 
 $EM_CONF[$_EXTKEY] = array(
@@ -26,12 +26,13 @@ $EM_CONF[$_EXTKEY] = array(
 	'uploadfolder' => 0,
 	'createDirs' => '',
 	'modify_tables' => '',
-	'clearCacheOnLoad' => 0,
+	'clearCacheOnLoad' => 1,
 	'lockType' => '',
 	'author_company' => '',
 	'version' => '0.2.1',
 	'constraints' => array(
 		'depends' => array(
+			'typo3' => '4.3.0-0.0.0',
 			'cms' => '',
 		),
 		'conflicts' => array(
@@ -40,7 +41,7 @@ $EM_CONF[$_EXTKEY] = array(
 			'smilie' => '',
 		),
 	),
-	'_md5_values_when_last_written' => 'a:18:{s:9:"ChangeLog";s:4:"a53b";s:32:"class.tx_simpleshoutbox_ajax.php";s:4:"dd51";s:31:"class.tx_simpleshoutbox_api.php";s:4:"0eb0";s:12:"ext_icon.gif";s:4:"0803";s:17:"ext_localconf.php";s:4:"08ae";s:14:"ext_tables.php";s:4:"4f00";s:14:"ext_tables.sql";s:4:"3cca";s:35:"icon_tx_simpleshoutbox_messages.gif";s:4:"475a";s:16:"locallang_db.xml";s:4:"50a7";s:22:"res/simpleshoutbox.css";s:4:"59c5";s:21:"res/simpleshoutbox.js";s:4:"2a1e";s:17:"res/template.html";s:4:"6290";s:40:"hooks/class.tx_simpleshoutbox_smilie.php";s:4:"54ee";s:35:"pi1/class.tx_simpleshoutbox_pi1.php";s:4:"0e37";s:17:"pi1/locallang.xml";s:4:"ee74";s:24:"pi1/static/editorcfg.txt";s:4:"094d";s:20:"pi1/static/setup.txt";s:4:"6d25";s:14:"doc/manual.sxw";s:4:"19aa";}',
+	'_md5_values_when_last_written' => 'a:19:{s:9:"ChangeLog";s:4:"0397";s:32:"class.tx_simpleshoutbox_ajax.php";s:4:"5541";s:31:"class.tx_simpleshoutbox_api.php";s:4:"ac52";s:16:"ext_autoload.php";s:4:"7d25";s:12:"ext_icon.gif";s:4:"0803";s:17:"ext_localconf.php";s:4:"08ae";s:14:"ext_tables.php";s:4:"4f00";s:14:"ext_tables.sql";s:4:"88ce";s:35:"icon_tx_simpleshoutbox_messages.gif";s:4:"475a";s:16:"locallang_db.xml";s:4:"50a7";s:14:"doc/manual.sxw";s:4:"f686";s:40:"hooks/class.tx_simpleshoutbox_smilie.php";s:4:"f525";s:35:"pi1/class.tx_simpleshoutbox_pi1.php";s:4:"5a94";s:17:"pi1/locallang.xml";s:4:"ee74";s:24:"pi1/static/editorcfg.txt";s:4:"094d";s:20:"pi1/static/setup.txt";s:4:"95bd";s:22:"res/simpleshoutbox.css";s:4:"59c5";s:21:"res/simpleshoutbox.js";s:4:"2a1e";s:17:"res/template.html";s:4:"c86a";}',
 	'suggests' => array(
 	),
 );
